kubernetes/luckin_oauth_adapter.yaml

apiVersion: v1
kind: Service
metadata:
  name: sso-adapter
  namespace: dify-ep  # 修改部署的目标ns
spec:
  selector:
    app: sso-adapter
  ports:
  - protocol: TCP
    port: 80            # 修改后需要同步修改ingress中配置
    targetPort: 8080

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: sso-adapter
  namespace: dify-ep  # 修改部署的目标ns
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sso-adapter
  template:
    metadata:
      labels:
        app: sso-adapter
    spec:
      restartPolicy: Always
      imagePullSecrets:
      - name: azure-docker-secret
      containers:
      - name: adapter
        image: aigccontainer.azurecr.cn/sso-adapter:latest
        imagePullPolicy: Always
        resources:
          # 资源
          requests:
            # 请求资源
            memory: "1Gi"
            cpu: "0.5"
          limits:
            # 最大资源
            memory: "2Gi"
            cpu: "2.0"
        ports:
        - containerPort: 8080
        volumeMounts:
        - name: mapping
          mountPath: "/app/config"
      volumes:
      - name: mapping
        configMap:
          name: sso-config-file
          items:
          - key: "mapping.yaml"
            path: "mapping.yaml"
