kubernetes/dify-sso-adapter.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: sso    # 酌情修改

---

apiVersion: v1
kind: Service
metadata:
  name: sso-adapter
  namespace: sso
spec:
  selector:
    app: sso-adapter
  ports:
  - protocol: TCP
    port: 80            # 修改后需要同步修改ingress中配置
    targetPort: 8080    # 保持不动

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: sso-adapter
  namespace: sso
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sso-adapter
  template:
    metadata:
      labels:
        app: sso-adapter
    spec:
      restartPolicy: Always
      imagePullSecrets:
      - name: azure-docker-secret
      containers:
      - name: adapter
        image: aigccontainer.azurecr.cn/sso-adapter:latest
        imagePullPolicy: Always
        resources:
          # 资源
          requests:
            # 请求资源
            memory: "1Gi"
            cpu: "0.5"
          limits:
            # 最新资源
            memory: "2Gi"
            cpu: "2.0"
        ports:
        - containerPort: 8080                   # 保持不动
---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sso-auth-ing
  namespace: sso
spec:
  rules:
  - host: haier-auth.apps.anspire.cn  # 域名需要修改
    http:
      paths:
      - backend:
          service:
            name: sso-adapter
            port:
              number: 80
        path: /api/oauth/token/code
        pathType: ImplementationSpecific
  - host: haier-auth.apps.anspire.cn
    http:
      paths:
      - backend:
          service:
            name: sso-adapter
            port:
              number: 80
        path: /api/oauth/account/info
        pathType: ImplementationSpecific
  - host: haier-auth.apps.anspire.cn
    http:
      paths:
      - backend:
          service:
            name: sso-adapter
            port:
              number: 80
        path: /login
        pathType: ImplementationSpecific
